JG-51 Added get user info route, and restructured files
